--- a/index.css
+++ b/index.css
@@ -31,13 +31,13 @@ p {
 
 /*-----------------Sidebar Section Start---------------  -*/
 .sidebar {
-    flex-basis: 25%;
+    flex-basis: 20%;
     background: #FFFFF2;
     border-radius: 30px;
     margin-right: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 /* Heading Section Starts  */
@@ -73,7 +73,7 @@ p {
 /* New Chat Section Start  */
 .newChat {
     display: flex;
-    width: 290px;
+    width: 250px;
     padding: 12px 16px;
     align-items: center;
     gap: 12px;
@@ -82,6 +82,7 @@ p {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
     margin-left: 15px;
     cursor: pointer;
+    margin-right: 10px;
 }
 
 .newChat img {
@@ -105,22 +106,22 @@ p {
 .button-section {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 15px;
+    margin-left: 10px;
     text-align: center;
 
 }
 
 .button-section img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     flex-shrink: 0;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .btn {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     flex-shrink: 0;
     border-radius: 12px;
     background: #FFE1EC;
@@ -130,6 +131,7 @@ p {
 
 .btn:hover {
     scale: 1.1;
+    transition: 0.5s ease-in;
 }
 
 /* ButtonSection Area End  */
@@ -142,7 +144,7 @@ p {
 
 /* ----------------Chat Container Section Start-------------  */
 .chat-container {
-    flex-basis: 75%;
+    flex-basis: 80%;
     background: whitesmoke;
     border-radius: 30px;
 }
@@ -167,7 +169,7 @@ p {
 .cc-text p {
     color: #000;
     font-family: Helvetica;
-    font-size: 48px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: 150%;
@@ -177,7 +179,7 @@ p {
 .cc-text div {
     color: #E5E5E5;
     font-family: Helvetica;
-    font-size: 48px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 700;
     letter-spacing: 0.96px;
@@ -189,7 +191,7 @@ p {
 
 .functionallity {
     display: flex;
-    margin-top: 40px;
+    margin-top: 20px;
     justify-content: center;
 }
 
@@ -222,6 +224,33 @@ p {
     margin-top: 10px;
 }
 
-.textarea-section {}
+.textarea-section {
+    position: fixed;
+    bottom: 50px;
+    justify-content: flex-end;
+}
+
+.textbox {
+    width: 60vw;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 16px;
+    color: rgba(0, 0, 0, 0.51);
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    margin: 0 10vw;
+}
+
+/* Style for the icon button */
+.icon-button {
+    position: absolute;
+    top: 50%;
+    right: 11px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
 
 /* ----------------Chat Container Section End-------------  */
