--- a/index.css
+++ b/index.css
@@ -246,9 +246,12 @@ p {
 /* Style for the icon button */
 .icon-button {
     position: absolute;
-    top: 50%;
-    right: 11px;
-    transform: translateY(-50%);
+    top: 16%;
+    right: 13%;
+    padding: 8px;
+    border-radius: 10px;
+    background: #191D99;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
     cursor: pointer;
 }
 
