--- a/index.css
+++ b/index.css
@@ -8,11 +8,36 @@
 body {
     margin: 0;
     box-sizing: border-box;
-    background: black;
+    background: whitesmoke;
 }
 
 p {
     margin: 0;
+}
+
+/* For webkit-based browsers like Chrome and Safari */
+::-webkit-scrollbar {
+    width: 10px;
+    /* Adjust this value to change the scrollbar width */
+}
+
+/* Track (the area on which the scrollbar is located) */
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    /* Change the background color if desired */
+}
+
+/* Handle (the draggable part of the scrollbar) */
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    /* Change the color of the scrollbar handle */
+    border-radius: 5px;
+    /* Add some rounded corners to the scrollbar handle */
+}
+
+/* On hover, make the scrollbar handle darker */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
 }
 
 /* Globally CSS Apply Section End  */
@@ -22,7 +47,7 @@ p {
 /* Container Section Start  */
 .container {
     display: flex;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 /* Container Section End  */
@@ -31,13 +56,15 @@ p {
 
 /*-----------------Sidebar Section Start---------------  -*/
 .sidebar {
+
     flex-basis: 20%;
     background: #FFFFF2;
-    border-radius: 30px;
+    border-radius: 0 30px 30px 0;
     margin-right: 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    height: 100vh;
 }
 
 /* Heading Section Starts  */
@@ -144,15 +171,19 @@ p {
 
 /* ----------------Chat Container Section Start-------------  */
 .chat-container {
-    flex-basis: 80%;
+    flex-basis: 70%;
     background: whitesmoke;
     border-radius: 30px;
+    background: white;
+    height: 85vh;
+    overflow-y: auto;
 }
 
 .cc-Heading {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom: 3px solid grey;
 }
 
 .cc-Heading img {
@@ -204,7 +235,7 @@ p {
 }
 
 .f-item .title {
-    color: #191D88;
+    color: #191d99;
     font-family: Inter;
     font-size: 16px;
     font-style: normal;
@@ -214,7 +245,7 @@ p {
 }
 
 .f-item .description {
-    color: #191D88;
+    color: #191d99;
     text-align: center;
     font-family: Inter;
     font-size: 14px;
@@ -228,6 +259,42 @@ p {
     position: fixed;
     bottom: 50px;
 }
+
+/* ------------- chat section starts ------------ */
+
+.chat {
+
+    color: white;
+
+    font-family: Inter;
+    margin: 30px;
+}
+
+.user-chat {
+    /* background: #343541; */
+    color: black;
+    font-size: 18px;
+    padding: 20px;
+    text-align: justify;
+}
+
+.machine-chat {
+    color: #191D99;
+    padding: 20px;
+    /* background-color: #444654; */
+    font-size: 18px;
+
+    /* helvetica font  */
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.pr {
+    white-space: pre-line;
+    /* overflow-x: auto; */
+  }
+
+/* --------------- chat section ends ------------- */
 
 .textbox {
     width: 60vw;
